adicionado todos os arquivos

--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -1,3 +1,9 @@
+@media (pointer: coarse) {
+    .header a:hover h2.logo {
+        color: inherit;
+    }
+}
+
 .header nav ul {
     display: flex;
     gap: 10px;
