--- a/src/css/style.css
+++ b/src/css/style.css
@@ -93,7 +93,7 @@ body {
     animation: downarrow 0.6s infinite alternate ease-in-out;
 }
 
-@media (width <=576px) {
+@media (width <= 576px) {
     .hero {
         height: 60vh;
     }
@@ -150,13 +150,7 @@ body {
     background: url(../images/sky.jpg) center/cover no-repeat;
 }
 
-/* @media (width <=992px) {
-    .about .item .btn-know-more:active {
-        font-weight: 700;
-    }
-} */
-
-@media (width <=576px) {
+@media (width <= 576px) {
     .about {
         grid-template-columns: 1fr;
         grid-template-rows: repeat(4, 1fr);
@@ -164,6 +158,28 @@ body {
 
     .about .image.right {
         order: 1;
+    }
+}
+
+@media (pointer: coarse) {
+    .header a:hover h2.logo {
+        color: inherit;
+    }
+
+    .about .item .btn-know-more:hover {
+        font-weight: inherit;
+    }
+}
+@media (width <= 992px) {
+    .header h2.logo {
+        transition: none;
+    }
+    .header a:active h2.logo {
+        color: #ff7f50;
+    }
+
+    .about .item .btn-know-more:active {
+        font-weight: 700;
     }
 }
 
@@ -200,7 +216,7 @@ body {
     background-color: lightpink;
 }
 
-@media (width <=576px) {
+@media (width <= 576px) {
     .services {
         grid-template-columns: 1fr;
     }
@@ -225,7 +241,7 @@ body {
     transform: scale(1.2);
 }
 
-@media (width <=992px) {
+@media (width <= 992px) {
     .projects {
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
@@ -236,7 +252,7 @@ body {
     }
 }
 
-@media (width <=576px) {
+@media (width <= 576px) {
     .projects {
         grid-template-columns: 1fr;
         grid-template-rows: repeat(4, 1fr);
@@ -248,11 +264,12 @@ body {
     grid-area: footer;
     padding-block: 100px;
     flex-direction: column;
-    background-image: radial-gradient(circle, #ffffff 0%, #8da4a9 100%);
+    background: linear-gradient(90deg, rgba(255,127,80,1) 0%, rgba(240,239,239,1) 36%, rgba(242,242,242,1) 64%, rgba(255,127,80,1) 100%);
 }
 
 .footer h4 {
     margin-bottom: 70px;
+    color: #ff7f50;
     font-size: 2.5rem;
     font-weight: 700;
 }
@@ -296,7 +313,7 @@ body {
     color: #DF0019;
 }
 
-@media (width <=992px) {
+@media (width <= 992px) {
     .footer nav ul li a:hover {
         border-bottom: 0;
     }
