--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,6 +18,36 @@ body {
     font-weight: 400;
 }
 
+section, footer {
+    position: relative;
+}
+
+section::before,
+footer::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 123, 255, 0.623);
+    pointer-events: none;
+    opacity: 0;
+}
+
+@keyframes highlight {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
+section:target::before,
+footer:target::before {
+    opacity: 1;
+    animation: highlight 1.5s ease forwards;
+}
+
 /* GLOBALS */
 .header,
 .hero,
@@ -93,9 +123,9 @@ body {
 }
 
 .hero::after {
+    content: url('../images/seta_preta.png');
     height: 35px;
     position: absolute;
-    content: url('../images/seta_preta.png');
     bottom: 40px;
     animation: downarrow 0.6s infinite alternate ease-in-out;
 }
@@ -117,9 +147,9 @@ body {
 /* SOBRE */
 .about {
     grid-area: about;
+    grid-template-columns: 1fr 1fr;
     max-width: 1920px;
     margin-inline: auto;
-    grid-template-columns: 1fr 1fr;
     background-color: #ffffff;
 }
 
@@ -135,9 +165,9 @@ body {
 }
 
 .about .item p {
+    text-align: center;
     font-size: 1.8rem;
     font-weight: 400;
-    text-align: center;
 }
 
 .about .item .btn-know-more:hover {
@@ -153,7 +183,6 @@ body {
 .about .image.right {
     background: url(../images/bridge.jpg) center/cover no-repeat;
 }
-
 .about .image.left {
     background: url(../images/sky.jpg) center/cover no-repeat;
 }
@@ -171,14 +200,14 @@ body {
 
 @media (pointer: coarse) {
     .about .item .btn-know-more:hover {
-        font-weight: inherit;
         text-decoration: none;
+        font-weight: inherit;
     }
 }
 @media (width <= 992px) {
     .about .item .btn-know-more:active {
-        font-weight: 500;
         text-decoration: underline;
+        font-weight: 500;
     }
 }
 
@@ -201,16 +230,15 @@ body {
 
 .services .service p {
     max-width: 400px;
+    text-align: center;
     font-size: 2rem;
     line-height: 25px;
     font-weight: 300;
-    text-align: center;
 }
 
 .services .service:nth-child(1) {
     background-color: lightskyblue;
 }
-
 .services .service:nth-child(2) {
     background-color: lightpink;
 }
@@ -299,15 +327,12 @@ body {
 .footer .social .fa-facebook-square:hover {
     color: #0863F7
 }
-
 .footer .social .fa-instagram:hover {
     color: #F71C9E;
 }
-
 .footer .social .fa-twitter-square:hover {
     color: #00A7E5
 }
-
 .footer .social .fa-pinterest:hover {
     color: #DF0019;
 }
@@ -328,15 +353,12 @@ body {
     .footer .social .fa-facebook-square {
         color: #0863F7
     }
-
     .footer .social .fa-instagram {
         color: #F71C9E;
     }
-
     .footer .social .fa-twitter-square {
         color: #00A7E5
     }
-
     .footer .social .fa-pinterest {
         color: #DF0019;
     }
